--- a/templates/indexpage.html
+++ b/templates/indexpage.html
@@ -291,7 +291,7 @@
   <body>
     <div class="container py-5">
       <div class="text-center mb-5" data-aos="fade-down">
-        <h1 class="page-title">Wikipedia Contributors Hub</h1>
+        <h1 class="page-title">Contributors Hub</h1>
         <h4 class="text-muted">Article Statistics</h4>
       </div>
 
