--- a/templates/indexpage.html
+++ b/templates/indexpage.html
@@ -70,6 +70,15 @@
         </div>
       </div>
 
+      <div id="loading" class="loading-toast">
+        <div class="d-flex align-items-center">
+          <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <span id="loading-text" class="ms-2">Loading...</span>
+        </div>
+      </div>
+
       <div class="contributors-section" data-aos="fade-up">
         <div class="d-flex justify-content-between align-items-center mb-4">
           <h3 class="mb-0">Recent Contributors</h3>
@@ -93,15 +102,6 @@
                 >
               </li>
             </ul>
-          </div>
-        </div>
-
-        <div id="loading" class="loading-toast">
-          <div class="d-flex align-items-center">
-            <div class="spinner-border text-primary" role="status">
-              <span class="visually-hidden">Loading...</span>
-            </div>
-            <span id="loading-text">Loading...</span>
           </div>
         </div>
 
